--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -15,6 +15,9 @@ services:
   exchange_broadcaster:
     image: local-exchange-broadcaster:latest
     
+  task_broadcaster:
+    image: local-task-broadcaster:latest
+    
   queue_receiver:
     image: local-queue-receiver:latest
     deploy:
@@ -24,6 +27,11 @@ services:
     image: local-exchange-receiver:latest
     deploy:
       replicas: 3
+      
+  task_receiver:
+    image: local-task-receiver:latest
+    deploy:
+      replicas: 10
       
   dozzle:
     image: amir20/dozzle
